<resources>
    <string name="app_name">NoFights</string>
    <string name="groups">Groups</string>
    <string name="create_group">Create group</string>
    <string name="group_name">Group Name</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="expense">Expense</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="options">OPTIONS</string>
    <string name="delete_group">Delete Group</string>
    <string name="add_member">Add Member</string>
    <string name="add_expense">Add Expense</string>
    <string name="enter_member_email">Enter Member EMail</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="enter_member_name">Enter Member Name</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="enter_expense" />
</resources>