<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/ng" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="402dp"
        android:autofillHints="text"
        android:hint="@string/name"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtAmmount"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="316dp"
        android:autofillHints="text"
        android:hint="Purpose"
        android:inputType="text" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="120dp"
        android:layout_height="60dp"

        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="213dp"
        android:backgroundTint="#F44336"
        android:text="@string/cancel"
        android:textSize="17sp" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="120dp"
        android:layout_height="60dp"

        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="266dp"
        android:layout_marginBottom="212dp"

        android:text="@string/create"
        android:textSize="17sp" />

</RelativeLayout>